<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pause_panel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical"
    android:padding="@dimen/space_xl">

    <TextView
        style="@style/TextAppearance.BubbleBlast.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/pause_title" />

    <TextView
        android:id="@+id/pause_level_text"
        style="@style/TextAppearance.BubbleBlast.Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/space_xs"
        android:text="@string/hud_level" />

    <TextView
        android:id="@+id/pause_resume_button"
        style="@style/Widget.BubbleBlast.Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/space_xl"
        android:text="@string/pause_resume" />

    <TextView
        android:id="@+id/pause_restart_button"
        style="@style/Widget.BubbleBlast.Button.Secondary"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/space_md"
        android:text="@string/pause_restart" />

    <TextView
        android:id="@+id/pause_settings_button"
        style="@style/Widget.BubbleBlast.Button.Ghost"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/space_md"
        android:text="@string/pause_settings" />

    <TextView
        android:id="@+id/pause_home_button"
        style="@style/Widget.BubbleBlast.Button.Ghost"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/space_md"
        android:text="@string/pause_home"
        android:textColor="@color/danger_red" />
</LinearLayout>
