<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/about_panel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical"
    android:padding="@dimen/space_xl">

    <ImageView
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@null"
        android:src="@drawable/ic_logo" />

    <TextView
        style="@style/TextAppearance.BubbleBlast.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/space_sm"
        android:text="@string/settings_about" />

    <TextView
        android:id="@+id/about_version_text"
        style="@style/TextAppearance.BubbleBlast.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/settings_version" />

    <TextView
        style="@style/TextAppearance.BubbleBlast.Body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_lg"
        android:text="@string/about_body" />

    <TextView
        style="@style/TextAppearance.BubbleBlast.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_md"
        android:text="@string/about_credits" />

    <TextView
        android:id="@+id/about_close_button"
        style="@style/Widget.BubbleBlast.Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/space_lg"
        android:text="@string/about_close" />
</LinearLayout>
