<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/daily_panel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical"
    android:padding="@dimen/space_xl">

    <TextView
        style="@style/TextAppearance.BubbleBlast.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/daily_title" />

    <TextView
        android:id="@+id/daily_streak_text"
        style="@style/TextAppearance.BubbleBlast.Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/space_xs"
        android:text="@string/daily_streak" />

    <LinearLayout
        android:id="@+id/daily_days_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_lg"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/daily_message_text"
        style="@style/TextAppearance.BubbleBlast.Body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_lg"
        android:gravity="center"
        android:text="@string/daily_already" />

    <TextView
        android:id="@+id/daily_claim_button"
        style="@style/Widget.BubbleBlast.Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/space_lg"
        android:text="@string/daily_claim" />

    <TextView
        android:id="@+id/daily_close_button"
        style="@style/Widget.BubbleBlast.Button.Ghost"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_small"
        android:layout_marginTop="@dimen/space_md"
        android:text="@string/daily_close" />
</LinearLayout>
