<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gameover_panel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical"
    android:padding="@dimen/space_xl">

    <TextView
        style="@style/TextAppearance.BubbleBlast.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/game_over_title"
        android:textColor="@color/danger_red" />

    <TextView
        android:id="@+id/gameover_reason_text"
        style="@style/TextAppearance.BubbleBlast.Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/space_xs"
        android:text="@string/game_over_reason_moves" />

    <LinearLayout
        style="@style/Widget.BubbleBlast.Panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_lg"
        android:orientation="vertical"
        android:padding="@dimen/space_md">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/TextAppearance.BubbleBlast.Body"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/game_over_score" />

            <TextView
                android:id="@+id/gameover_score_text"
                style="@style/TextAppearance.BubbleBlast.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_subtitle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xs"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/TextAppearance.BubbleBlast.Body"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/game_over_best" />

            <TextView
                android:id="@+id/gameover_best_text"
                style="@style/TextAppearance.BubbleBlast.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/accent_gold"
                android:textSize="@dimen/text_subtitle" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/gameover_continue_button"
        style="@style/Widget.BubbleBlast.Button.Ghost"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/space_md"
        android:text="@string/game_over_continue_ad"
        android:textColor="@color/accent_cyan"
        android:visibility="gone" />

    <TextView
        android:id="@+id/gameover_retry_button"
        style="@style/Widget.BubbleBlast.Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/space_md"
        android:text="@string/game_over_retry" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_md"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/gameover_levels_button"
            style="@style/Widget.BubbleBlast.Button.Secondary"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/game_over_levels" />

        <TextView
            android:id="@+id/gameover_home_button"
            style="@style/Widget.BubbleBlast.Button.Secondary"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/space_md"
            android:layout_weight="1"
            android:text="@string/game_over_home" />
    </LinearLayout>
</LinearLayout>
