<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/confirm_panel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical"
    android:padding="@dimen/space_xl">

    <TextView
        android:id="@+id/confirm_title"
        style="@style/TextAppearance.BubbleBlast.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/settings_reset_title" />

    <TextView
        android:id="@+id/confirm_message"
        style="@style/TextAppearance.BubbleBlast.Body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_md"
        android:gravity="center"
        android:text="@string/settings_reset_message" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_xl"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/confirm_negative_button"
            style="@style/Widget.BubbleBlast.Button.Secondary"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/common_cancel" />

        <TextView
            android:id="@+id/confirm_positive_button"
            style="@style/Widget.BubbleBlast.Button.Primary"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/space_md"
            android:layout_weight="1"
            android:text="@string/common_yes" />
    </LinearLayout>
</LinearLayout>
