<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/shop_panel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical"
    android:padding="@dimen/space_xl">

    <TextView
        style="@style/TextAppearance.BubbleBlast.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/shop_title" />

    <LinearLayout
        style="@style/Widget.BubbleBlast.Pill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/space_md"
        android:background="@drawable/bg_coins_pill"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_coin" />

        <TextView
            android:id="@+id/shop_balance_text"
            style="@style/TextAppearance.BubbleBlast.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_sm"
            android:textSize="@dimen/text_body"
            android:text="@string/shop_balance" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/shop_rows_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_md"
        android:orientation="vertical" />

    <TextView
        android:id="@+id/shop_close_button"
        style="@style/Widget.BubbleBlast.Button.Secondary"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/space_md"
        android:text="@string/shop_close" />
</LinearLayout>
