<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/level_item_root"
    android:layout_width="match_parent"
    android:layout_height="@dimen/level_tile_min"
    android:background="@drawable/bg_level_unlocked"
    android:clickable="true"
    android:focusable="true">

    <TextView
        android:id="@+id/level_number"
        style="@style/TextAppearance.BubbleBlast.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/space_sm"
        android:text="@string/hud_level" />

    <LinearLayout
        android:id="@+id/level_stars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="@dimen/space_sm"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/level_star_1"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:contentDescription="@string/cd_star_empty"
            android:src="@drawable/ic_star_empty" />

        <ImageView
            android:id="@+id/level_star_2"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="@dimen/space_xxs"
            android:contentDescription="@string/cd_star_empty"
            android:src="@drawable/ic_star_empty" />

        <ImageView
            android:id="@+id/level_star_3"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="@dimen/space_xxs"
            android:contentDescription="@string/cd_star_empty"
            android:src="@drawable/ic_star_empty" />
    </LinearLayout>

    <ImageView
        android:id="@+id/level_lock"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_gravity="center"
        android:contentDescription="@string/cd_locked_level"
        android:src="@drawable/ic_lock"
        android:visibility="gone" />
</FrameLayout>
